// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  No data found
</div>
`;

exports[`renders correctly when custom message passed 1`] = `
<div>
  No records found.
</div>
`;
